# Unisa-Free-Rooms

./: README.md  pyproject.toml
rooms/: settings.py  urls.py
rooms/core/: views.py
